# testrepo

./: CMakeLists.txt  README.md  TestConfig.h.in  azure-pipelines.yml  test.cpp
config/: LinConfig.h.in  WinConfig.h.in  macConfig.h.in
config/linux/: linux.h.in
config/macos/: macos.h.in
config/windows/: windows.h.in
libraries/: CMakeLists.txt  CustomLib.cpp
